--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "next": "13.5.4",
+    "nodemailer": "^6.9.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0"
